--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
                                         <a href="404.html" class="dropdown-item">Potensi Bahaya dan Mitigasi Resiko </a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
                         </div>
                         <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a>
                     </div>
