--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,7 @@
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">Only 1 Person</a>
+                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">Our team
                     </div>
                 </div>
             </div>
