--- a/team.html
+++ b/team.html
@@ -89,7 +89,7 @@
                                     <a href="404.html" class="dropdown-item">Potensi Bahaya dan Mitigasi Resiko </a>
                                 </div>
                             </div>
-                            <a href="contact.html" class="nav-item nav-link">Contact</a>
+                            <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
                         </div>
                         <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a>
                     </div>
@@ -322,7 +322,7 @@
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">Only 1 Person</a>
+                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">Our Team</a>
                     </div>
                 </div>
             </div>
