--- a/about.html
+++ b/about.html
@@ -86,6 +86,8 @@
                                     <a href="team.html" class="dropdown-item">Safety Tool</a>
                                     <a href="testimonial.html" class="dropdown-item">Landasan Hukum</a>
                                     <a href="404.html" class="dropdown-item">Potensi Bahaya dan Mitigasi Resiko </a>
+                                    <a href="audit.html" class="dropdown-item">Audit Perusahaan </a>
+                                    
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
