--- a/contact.html
+++ b/contact.html
@@ -90,9 +90,11 @@
                                 <a href="team.html" class="dropdown-item">Safety Tool</a>
                                 <a href="testimonial.html" class="dropdown-item">Landasan Hukum</a>
                                 <a href="404.html" class="dropdown-item">Potensi Bahaya dan Mitigasi Resiko </a>
+                                <a href="audit.html" class="dropdown-item">Audit Perusahaan </a>
+                                <a href="Feedback.html" class="dropdown-item">Umpan Balik </a>
                             </div>
                         </div>
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
                     </div>
                     <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a>
                 </div>
@@ -173,7 +175,7 @@
             <p>Melakukan evaluasi internal terhadap sistem manajemen K3, mengidentifikasi area perbaikan, memastikan kepatuhan terhadap standar dan prosedur K3, serta memberikan rekomendasi untuk peningkatan berkelanjutan.</p>
         </div>
 
-        <div class="position audit-eksternal">
+        <div class="position audit-eksternal text-center" uat>
             <i class="fas fa-certificate"></i>
             <h4>AUDIT EKSTERNAL K3</h4>
             <p>Melakukan audit independen terhadap sistem manajemen K3 perusahaan, memberikan sertifikasi, dan memastikan kesesuaian dengan standar internasional serta regulasi yang berlaku.</p>
@@ -235,6 +237,14 @@
 .resiko-image {
     max-width: 700px;
     height: auto;
+}
+
+.text-center {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
         </style>
         <br>
@@ -317,7 +327,7 @@
                         <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
                         <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
                         <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">Our team
+                        Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">Our Team</a>
                     </div>
                 </div>
             </div>
