--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
                                     <a href="team.html" class="dropdown-item">Safety Tool</a>
                                     <a href="testimonial.html" class="dropdown-item">Landasan Hukum</a>
                                     <a href="404.html" class="dropdown-item">Potensi Bahaya dan Mitigasi Resiko </a>
+                                    <a href="audit.html" class="dropdown-item">Audit Perusahaan </a>
+                                    <a href="Feedback.html" class="dropdown-item">Umpan Balik </a>
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
@@ -527,10 +529,10 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Quick Links</h4>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> About</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Cars</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Car Types</a>
+                            <a href="#"><i class="fas fa-angle-right me-2"></i> Service</a>
+                            <a href="#"><i class="fas fa-angle-right me-2"></i> Denah</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Team</a>
-                            <a href="#"><i class="fas fa-angle-right me-2"></i> Contact us</a>
+                            <a href="#"><i class="fas fa-angle-right me-2"></i>  Struktur Organisasi</a>
                             <a href="#"><i class="fas fa-angle-right me-2"></i> Terms & Conditions</a>
                         </div>
                     </div>
