--- a/service.html
+++ b/service.html
@@ -87,6 +87,8 @@
                                     <a href="team.html" class="dropdown-item">Safety Tool</a>
                                     <a href="testimonial.html" class="dropdown-item">Landasan Hukum</a>
                                     <a href="404.html" class="dropdown-item">Potensi Bahaya dan Mitigasi Resiko </a>
+                                    <a href="audit.html" class="dropdown-item">Audit Perusahaan </a>
+                                    <a href="Feedback.html" class="dropdown-item">Umpan Balik </a>
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
@@ -152,7 +154,7 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
+
                                     </div>
                                 </div>
                             </div>
@@ -170,7 +172,7 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
+
                                     </div>
                                 </div>
                             </div>
@@ -188,7 +190,7 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
+
                                     </div>
                                 </div>
                             </div>
@@ -206,7 +208,7 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
+
                                     </div>
                                 </div>
                             </div>
