--- a/team.html
+++ b/team.html
@@ -87,6 +87,8 @@
                                     <a href="team.html" class="dropdown-item">Safety Tool</a>
                                     <a href="testimonial.html" class="dropdown-item">Landasan Hukum</a>
                                     <a href="404.html" class="dropdown-item">Potensi Bahaya dan Mitigasi Resiko </a>
+                                    <a href="audit.html" class="dropdown-item">Audit Perusahaan </a>
+                                    <a href="Feedback.html" class="dropdown-item">Umpan Balik </a>
                                 </div>
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
