--- a/about.html
+++ b/about.html
@@ -283,8 +283,8 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <a href="#"><i class="fa fa-map-marker-alt me-2"></i> Jalan Kademangan no. 87 Kota Gresik</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> ptsuperf@gmail.com</a>
-                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +628324546453</a>
+                            <a href="mailto:radityariefki5@gmail.com"><i class="fas fa-envelope me-2"></i> ptsuperf@gmail.com</a>
+                            <a href="https://wa.me/6281357462594"><i class="fas fa-phone me-2"></i> +628324546453</a>
                             <div class="d-flex">
                             </div>
                         </div>
