--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                                         <textarea class="form-control border-0" placeholder="Special Request"></textarea>
                                                     </div>
                                                     <div class="col-12">
-                                                        <button class="btn btn-secondary w-100 py-3" type="submit">Book Now</button>
+                                                        <button href="mailto:radityariefki5@gmail.com" class="btn btn-secondary w-100 py-3" type="submit">Book Now</button>
                                                     </div>
                                     </div>
                                 </div>
@@ -360,7 +360,6 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -378,7 +377,6 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -396,7 +394,6 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -414,7 +411,6 @@
                                         <p><i class="fa fa-check text-success me-3"></i>Quality Servicing</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Expert Workers</p>
                                         <p><i class="fa fa-check text-success me-3"></i>Modern Equipment</p>
-                                        <a href="" class="btn btn-primary py-3 px-5 mt-3">Read More<i class="fa fa-arrow-right ms-3"></i></a>
                                     </div>
                                 </div>
                             </div>
@@ -547,8 +543,8 @@
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Contact Info</h4>
                             <a href="#"><i class="fa fa-map-marker-alt me-2"></i> Jalan Kademangan no. 87 Kota Gresik</a>
-                            <a href="mailto:info@example.com"><i class="fas fa-envelope me-2"></i> ptsuperf@gmail.com</a>
-                            <a href="tel:+012 345 67890"><i class="fas fa-phone me-2"></i> +628324546453</a>
+                            <a href="mailto:radityariefki5@gmail.com"><i class="fas fa-envelope me-2"></i> ptsuperf@gmail.com</a>
+                            <a href="https://wa.me/6281357462594"><i class="fas fa-phone me-2"></i> +628324546453</a>
                             <div class="d-flex">
                             </div>
                         </div>
