--- a/service.html
+++ b/service.html
@@ -93,7 +93,7 @@
                             </div>
                             <a href="contact.html" class="nav-item nav-link">Struktur Organisasi</a>
                         </div>
- 
+                        <a href="#" class="btn btn-primary rounded-pill py-2 px-4">Get Started</a>
                     </div>
                 </nav>
             </div>
@@ -296,7 +296,7 @@
     </ul>
                             </div>
                         </div>
-
+                    </div>
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4">Business Hours</h4>
